@@ -27,6 +27,9 @@ debhelper (10.9) UNRELEASED; urgency=medium
     (Closes: #840913)
   * Dh_lib.pm: Expand *_doit and doit to also support a chdir in the
     child process.
+  * Dh_Getopt.pm: Validate package names passed via -p and -N to ensure
+    they are present in d/control.  Thanks to Matthias Klose for the
+    report.  (Closes: #795432)
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
